Okay I learned a ton of git mistakes that I've been making, and fixed them! As of this commit, .tex file compiles without any errors.

--- a/Documentation/Control_System_Documentation.tex
+++ b/Documentation/Control_System_Documentation.tex
@@ -27,7 +27,8 @@
 \BeforeBeginEnvironment{minted}{\begin{mdframed}}
 \AfterEndEnvironment{minted}{\end{mdframed}}
 \date{\today}
-\title{}
+\author{Ben Anderson}
+\title{The STANELEy User Manual \\[1ex] \large Stabilization and Transducer Alignment for Nearby Laser Elastography}
 \hypersetup{
  pdfauthor={Ben Anderson},
  pdftitle={UR3e Documentation},
@@ -45,13 +46,8 @@ output/.style= {coordinate},
 pinstyle/.style = {pin edge={to-,thin,black}
 }
 }
-
 \newcommand\connect[2]{\path[draw,arrow] (#1) |- ($(#1)!1/2!(#2)$) -| (#2)}
 
-% \setcounter{secnumdepth}{0}
-\author{Ben Anderson}
-% \date{\today}
-\title{UR3e OCE Stabilization System}
 \maketitle
 \tableofcontents
 \parskip=6pt
@@ -65,11 +61,11 @@ I need a section detailing how my code works to optimize the strength of the inp
 
 I need a section detailing how all of these bits of code interact with each other (will be the hard bit)
 
-Creative decision: I could either lead with the section detailing how all the components interact with each other, or I could lead with sections detailing individual components and close with a section summarizing their overlap. The tradeoff is the summary section will be missing a lot of context, but this could potentially be provided by linking forwards repeatedly. Mayhaps this is the move. I just need to learn how to link to a place further along in a document (\autoref{sec:hello}).
+Creative decision: I could either lead with the section detailing how all the components interact with each other, or I could lead with sections detailing individual components and close with a section summarizing their overlap. The tradeoff is the summary section will be missing a lot of context, but this could potentially be provided by linking forwards repeatedly. Mayhaps this is the move. I just need to learn how to link to a place further along in a document (\autoref{hello}).
 
 Okay that looks promising to me. Lets go with that.
 
-\section{Introduction}\label{sec:hello}
+\section{Introduction}\label{hello}
 
 The focus of my work for the better part of the last year has been studying how to use a UR3e Cobot for the purposes of focusing and stabilizing a sensor at its focal length away from a target surface. This has involved a thorough examination of the API and programming tools that accompany the Universal Robots ecosystem, as well as creating systems for synchronizing the robotic control system with signal processing and sensor systems.
 
@@ -123,12 +119,10 @@ Overall the system utilizes three discrete devices and at least three programmin
 
 \section{STANELEy and the URScript API}\label{sec:robot_summary}
 
-The body of the novelty surrounding this project centers around the use of a UR3e robotic arm to position and hold the OCE sensor. \\
+The body of the novelty surrounding this project centers around the use of a UR3e robotic arm to position and hold the OCE sensor.
+
 The UR3e is manufactured by Universal Robots and is primarily designed to automate human labor. Shipped with the robotic arm is a control box and a teach pendant, a hand-held tablet for manually controlling the robot. The control box allows one to write and execute scripts using the proprietary URScript API, a set of functions built into the robot that handle common tasks related to positioning and animating the arm.
 Additionally, the control box has an ethernet port supporting the secondary and Real Time Data Exchange interfaces. Both of these have their uses and can be read about in the \hyperlink{https://www.universal-robots.com/articles/ur/interface-communication/remote-control-via-tcpip/}{remote control interface guide}, however they weren't adequate for the method ultimately used. \\
-
-
-
 
 \subsection{The Teach Pendant and the PolyScope interface}\label{sec:pendant}
 The teach pendant is the default accesory for interacting with the internals of the robot. It is shipped with the robot along with the control box.
@@ -145,8 +139,9 @@ The full manual for PolyScope can be read \hyperlink{https://s3-eu-west-1.amazon
 
 \subsubsection{Initialization and setup}
 In order to use the robot, power on the tool box by pressing the physical power button above the screen and next to the e-stop on the teach pendant. 
-(It can be finicky how long a press is necessary, so if you suspect you're holding the button down too long listen for a click from the control box to indicate it has been powered on. You should release the button immediately after hearing this click).\\
-The power button should light up green and the screen should show a loading screen as the robot takes a minute to boot up.\\
+(It can be finicky how long a press is necessary, so if you suspect you're holding the button down too long listen for a click from the control box to indicate it has been powered on. You should release the button immediately after hearing this click).
+
+The power button should light up green and the screen should show a loading screen as the robot takes a minute to boot up.
 
 Upon fully booting up, the robot itself still remains dormant. In the bottom-left of the screen is the \uline{robot status indicator}, shown here:
 
@@ -161,18 +156,63 @@ The color inside the circle indicates the state of the robot:
     \item \emph{Green}: Powered on and ready for normal operation.
 \end{itemize}
 
-After booting up the control box you enter the Initialization screen (shown in the image above). When powering up the robot from full-shutdown the central button will be active and you will press it twice to enable the robot; first it will say `ON` and you press it to deliver power to the robot, then it will say `START` and you will press it to unlock the brakes and enable the robot completely.\\
+After booting up the control box you enter the Initialization screen (shown in the image above). When powering up the robot from full-shutdown the central button will be active and you will press it twice to enable the robot; first it will say `ON' and you press it to deliver power to the robot, then it will say `START' and you will press it to unlock the brakes and enable the robot completely.
 
 \emph{Warning:} The robot will move slightly as the brakes are unlocked, do not leave the robot in a stat where this motion will put nearby equipment at risk.
 
 \subsubsection*{Program tab}
-The program tab is one of the options in the menu tab. Here is where you write/modify URScript programs. The UR3e used in our lab has a program saved already that can be opened by tapping the "open" button in the top banner and tapping "Program" from the subsequent dropdown. (The program written for this lab is still called \texttt{test.urp})
+The program tab is one of the options in the menu tab. Here is where you write/modify URScript programs. The UR3e used in our lab has a program saved already that can be opened by tapping the `open' button in the top banner and tapping `Program' from the subsequent dropdown. (The program written for this lab is still called \texttt{test.urp})
 
 \subsection{URScript API}\label{sec:urscript}
 
 \section{Python + the control loop}\label{sec:control_code}
 \subsection{Startup guide}\label{sec:startup}
-There isn't really content here yet.
+Pending the rest of the summary, the following procedure should be all you need to start running this control system on your machine.
+\subsubsection{First installation}
+These steps only need to be ran once when initially setting up your Cobot, and don't need to be repeated on subsequent use.
+\begin{enumerate}
+    \item Install all software dependencies on the computer.
+    \begin{itemize}
+        \item Python 3.8+ on target machine
+        \item Packages required for all of the python code can be installed by running \\ \texttt{pip install -r requirements.txt} \\ from the main directory of this repository
+        \item MATLAB/LabView/whatever other signal processing code you need for dealing with sensor input
+    \end{itemize}
+    \item Connect the UR3e robot to your machine via an ethernet cable.
+    \item Assign the ethernet connection to your robot a static IP address with the following criteria:
+    \begin{itemize}
+        \item \textbf{IPv4}
+        \item \textbf{IP address:} \texttt{192.168.0.5} (Corresponds to addresses hard-coded into the running programs)
+        \item \textbf{Subnet prefix length:} \texttt{255.255.255.0}
+        \item \textbf{Gateway:} \texttt{192.168.0.1}
+        \item \textbf{Preferred DNS:}  \texttt{10.1.2.1}
+        \item \textbf{Alternate DNS:} \texttt{8.8.8.8} (Less critical, any valid DNS will do)
+    \end{itemize}
+    \item Do the same on the robot, instead assigning the following values:
+    \begin{itemize}
+        \item \textbf{IPv4}
+        \item \textbf{IP address:} \texttt{192.168.0.10}
+        \item \textbf{Subnet prefix length:} \texttt{255.255.255.0}
+        \item \textbf{Gateway:} \texttt{192.168.0.1}
+        \item Set the DNS settings to any valid DNS addresses.
+        \item Details on modifying network settings an be found on page 108 of the \hyperlink{https://s3-eu-west-1.amazonaws.com/ur-support-site/44018/Software_Manual_en_Global.pdf\#page=108}{Polyscope manual}
+    \end{itemize}
+    \item Write/save/open a program on the UR3e that does the following:
+        \begin{quote}
+\begin{verbatim}
+BeforeStart:
+    script(before_start.script)
+Robot Program:
+    script(robot_program.script)        
+\end{verbatim}
+        \end{quote}
+    \begin{itemize}
+        \item The corresponding scripts are found in the \texttt{\textbackslash{}Code\_for\_the\_robot} folder in this repository.
+        \item For more information on node programming, check out the chapter on programming in the \hyperlink{https://s3-eu-west-1.amazonaws.com/ur-support-site/44018/Software_Manual_en_Global.pdf\#page=60}{Poylscope manual} 
+    \end{itemize}
+    \item Make sure the program 
+\end{enumerate}
+
+
 \subsection{TransducerHoming.py}\label{sec:TransducerHoming}
 
 STANLEy -> Stabilization and Transducer Alignment for Nearby Laser Elastography
